force-app/main/default/objects/Reason_Code__c/Reason_Code__c.object-meta.xml
<CustomObject>
    <label>Reason Code</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Reason Code Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reason Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>