force-app/main/default/objects/Reason_Code__c/fields/Supply_Chain__c.field-meta.xml
<CustomField>
    <fullName>Supply_Chain__c</fullName>
    <label>Supply Chain</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mismatch Alignment</fullName>
            </value>
            <value>
                <fullName>Leakage</fullName>
            </value>
            <value>
                <fullName>Misplacement</fullName>
            </value>
            <value>
                <fullName>Unknow</fullName>
            </value>
            <value>
                <fullName>Not fitting</fullName>
            </value>
            <value>
                <fullName>Damaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>