force-app/main/default/objects/Reason_Code__c/recordTypes/Reject.recordType-meta.xml
<RecordType>
    <fullName>Reject</fullName>
    <active>true</active>
    <label>Reject</label>
</RecordType>