force-app/main/default/objects/Reason_Code__c/recordTypes/Rework.recordType-meta.xml
<RecordType>
    <fullName>Rework</fullName>
    <active>true</active>
    <label>Rework</label>
</RecordType>