force-app/main/default/objects/Reason_Code__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Reason_Code__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Reason_Code_Description__c</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>